--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "hello-world",
+  "name": "node-code-along",
   "version": "1.0.0",
   "description": "",
-  "main": "hello-world.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/drmeloy/node-code-along.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/drmeloy/node-code-along/issues"
+  },
+  "homepage": "https://github.com/drmeloy/node-code-along#readme",
   "dependencies": {
-    "http": "0.0.0"
+    "querystring": "^0.2.0",
+    "url": "^0.11.0"
   }
 }
